12주차 과제 최종수정본

--- a/week12.ipynb
+++ b/week12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bd553ac3",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,6 @@
     "data1= csv.reader(f1)\n",
     "next(data1)\n",
     "\n",
-    "f2 = open('seoul.csv')\n",
-    "data2= csv.reader(f2)\n",
-    "next(data2)\n",
-    "\n",
     "highTemp = float(0) #최고기온이 가장 높은날\n",
     "lowTemp = float(999) #최저기온이 가장  낮은날\n",
     "bigGapTemp = float(0) #일교차가 가장 큰 날\n",
@@ -41,7 +37,14 @@
     "    temp = float(row[4]) - float(row[3])\n",
     "    if bigGapTemp < temp:\n",
     "         bigGapTemp = temp\n",
-    "    \n",
+    "\n",
+    "            \n",
+    "\n",
+    "f2 = open('seoul.csv')\n",
+    "data2= csv.reader(f2)\n",
+    "next(data2)\n",
+    "\n",
+    "\n",
     "highDate = ''\n",
     "lowDate = ''\n",
     "bigGapDate = ''\n",
@@ -67,11 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "80273fa1",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -79,238 +80,235 @@
      "text": [
       "============================================\n",
       "1호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  서울역 2160466\n",
-      "       1.  종각 1686754\n",
-      "       1.  종로3가 1296143\n",
+      "       1.  서울역 (인원수) 2160466\n",
+      "       2.  종각 (인원수) 1686754\n",
+      "       3.  종로3가 (인원수) 1296143\n",
       "1호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  동묘앞 556629\n",
-      "       1.  동대문 621554\n",
-      "       1.  신설동 730691\n",
+      "       1.  동묘앞 (인원수) 556629\n",
+      "       2.  동대문 (인원수) 621554\n",
+      "       3.  신설동 (인원수) 730691\n",
       "============================================\n",
       "2호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  강남 4275444\n",
-      "       1.  잠실(송파구청) 3522074\n",
-      "       1.  신림 3318933\n",
+      "       1.  강남 (인원수) 4275444\n",
+      "       2.  잠실(송파구청) (인원수) 3522074\n",
+      "       3.  신림 (인원수) 3318933\n",
       "2호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  도림천 75668\n",
-      "       1.  신답 88876\n",
-      "       1.  용두(동대문구청) 126177\n",
+      "       1.  도림천 (인원수) 75668\n",
+      "       2.  신답 (인원수) 88876\n",
+      "       3.  용두(동대문구청) (인원수) 126177\n",
       "============================================\n",
       "3호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  고속터미널 2262541\n",
-      "       1.  양재(서초구청) 2063345\n",
-      "       1.  연신내 1965286\n",
+      "       1.  고속터미널 (인원수) 2262541\n",
+      "       2.  양재(서초구청) (인원수) 2063345\n",
+      "       3.  연신내 (인원수) 1965286\n",
       "3호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  충무로 35\n",
-      "       1.  학여울 124884\n",
-      "       1.  지축 208890\n",
+      "       1.  충무로 (인원수) 35\n",
+      "       2.  학여울 (인원수) 124884\n",
+      "       3.  지축 (인원수) 208890\n",
       "============================================\n",
       "4호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  수유(강북구청) 1824986\n",
-      "       1.  혜화 1651073\n",
-      "       1.  쌍문 1510539\n",
+      "       1.  수유(강북구청) (인원수) 1824986\n",
+      "       2.  혜화 (인원수) 1651073\n",
+      "       3.  쌍문 (인원수) 1510539\n",
       "4호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  남태령 63059\n",
-      "       1.  동작(현충원) 156122\n",
-      "       1.  삼각지 273241\n",
+      "       1.  남태령 (인원수) 63059\n",
+      "       2.  동작(현충원) (인원수) 156122\n",
+      "       3.  삼각지 (인원수) 273241\n",
       "============================================\n",
       "5호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  까치산 1544148\n",
-      "       1.  광화문(세종문화회관) 1521981\n",
-      "       1.  여의도 1472353\n",
+      "       1.  까치산 (인원수) 1544148\n",
+      "       2.  광화문(세종문화회관) (인원수) 1521981\n",
+      "       3.  여의도 (인원수) 1472353\n",
       "5호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  동대문역사문화공원(DDP) 149815\n",
-      "       1.  강일 166615\n",
-      "       1.  오금 199273\n",
+      "       1.  동대문역사문화공원(DDP) (인원수) 149815\n",
+      "       2.  강일 (인원수) 166615\n",
+      "       3.  오금 (인원수) 199273\n",
       "============================================\n",
       "6호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  응암 948441\n",
-      "       1.  공덕 937546\n",
-      "       1.  망원 805257\n",
+      "       1.  응암 (인원수) 948441\n",
+      "       2.  공덕 (인원수) 937546\n",
+      "       3.  망원 (인원수) 805257\n",
       "6호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  신내 3\n",
-      "       1.  연신내 24\n",
-      "       1.  버티고개 118222\n",
+      "       1.  신내 (인원수) 3\n",
+      "       2.  연신내 (인원수) 24\n",
+      "       3.  버티고개 (인원수) 118222\n",
       "============================================\n",
       "7호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  가산디지털단지 2311208\n",
-      "       1.  학동 1243995\n",
-      "       1.  광명사거리 1192906\n",
+      "       1.  가산디지털단지 (인원수) 2311208\n",
+      "       2.  학동 (인원수) 1243995\n",
+      "       3.  광명사거리 (인원수) 1192906\n",
       "7호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  장암 92611\n",
-      "       1.  부천종합운동장 237345\n",
-      "       1.  삼산체육관 261924\n",
+      "       1.  장암 (인원수) 92611\n",
+      "       2.  부천종합운동장 (인원수) 237345\n",
+      "       3.  삼산체육관 (인원수) 261924\n",
       "============================================\n",
       "8호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  문정 1118070\n",
-      "       1.  암사 947811\n",
-      "       1.  장지 894437\n",
+      "       1.  문정 (인원수) 1118070\n",
+      "       2.  암사 (인원수) 947811\n",
+      "       3.  장지 (인원수) 894437\n",
       "8호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  모란 226470\n",
-      "       1.  신흥 252096\n",
-      "       1.  수진 265390\n",
+      "       1.  모란 (인원수) 226470\n",
+      "       2.  신흥 (인원수) 252096\n",
+      "       3.  수진 (인원수) 265390\n",
       "============================================\n",
       "9호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  신논현 1650695\n",
-      "       1.  노량진 1392678\n",
-      "       1.  여의도 1330983\n",
+      "       1.  신논현 (인원수) 1650695\n",
+      "       2.  노량진 (인원수) 1392678\n",
+      "       3.  여의도 (인원수) 1330983\n",
       "9호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  동작(현충원) 90077\n",
-      "       1.  개화 115261\n",
-      "       1.  구반포 149370\n",
+      "       1.  동작(현충원) (인원수) 90077\n",
+      "       2.  개화 (인원수) 115261\n",
+      "       3.  구반포 (인원수) 149370\n",
       "============================================\n",
       "9호선2~3단계 : 이용객이 가장 많은 역 순위\n",
-      "       1.  봉은사 798842\n",
-      "       1.  언주 509822\n",
-      "       1.  선정릉 503676\n",
+      "       1.  봉은사 (인원수) 798842\n",
+      "       2.  언주 (인원수) 509822\n",
+      "       3.  선정릉 (인원수) 503676\n",
       "9호선2~3단계 : 이용객이 가장 적은 역 순위\n",
-      "       1.  둔촌오륜 59215\n",
-      "       1.  한성백제 125313\n",
-      "       1.  종합운동장 218529\n",
+      "       1.  둔촌오륜 (인원수) 59215\n",
+      "       2.  한성백제 (인원수) 125313\n",
+      "       3.  종합운동장 (인원수) 218529\n",
       "============================================\n",
       "경부선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  영등포 2122152\n",
-      "       1.  수원 2044759\n",
-      "       1.  용산 1778151\n",
+      "       1.  영등포 (인원수) 2122152\n",
+      "       2.  수원 (인원수) 2044759\n",
+      "       3.  용산 (인원수) 1778151\n",
       "경부선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  직산 42217\n",
-      "       1.  서동탄 77941\n",
-      "       1.  진위 81413\n",
+      "       1.  직산 (인원수) 42217\n",
+      "       2.  서동탄 (인원수) 77941\n",
+      "       3.  진위 (인원수) 81413\n",
       "============================================\n",
       "경인선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  부천 1833309\n",
-      "       1.  부평 1749882\n",
-      "       1.  역곡 1507167\n",
+      "       1.  부천 (인원수) 1833309\n",
+      "       2.  부평 (인원수) 1749882\n",
+      "       3.  역곡 (인원수) 1507167\n",
       "경인선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  도원 178719\n",
-      "       1.  인천 193187\n",
-      "       1.  도화 222447\n",
+      "       1.  도원 (인원수) 178719\n",
+      "       2.  인천 (인원수) 193187\n",
+      "       3.  도화 (인원수) 222447\n",
       "============================================\n",
       "경원선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  의정부 1022741\n",
-      "       1.  청량리(서울시립대입구) 857752\n",
-      "       1.  왕십리(성동구청) 784449\n",
+      "       1.  의정부 (인원수) 1022741\n",
+      "       2.  청량리(서울시립대입구) (인원수) 857752\n",
+      "       3.  왕십리(성동구청) (인원수) 784449\n",
       "경원선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  창동 11\n",
-      "       1.  옥수 2659\n",
-      "       1.  보산 89699\n",
+      "       1.  창동 (인원수) 11\n",
+      "       2.  옥수 (인원수) 2659\n",
+      "       3.  보산 (인원수) 89699\n",
       "============================================\n",
       "안산선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  중앙 980955\n",
-      "       1.  산본 888859\n",
-      "       1.  상록수 886908\n",
+      "       1.  중앙 (인원수) 980955\n",
+      "       2.  산본 (인원수) 888859\n",
+      "       3.  상록수 (인원수) 886908\n",
       "안산선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  신길온천 92297\n",
-      "       1.  수리산 219523\n",
-      "       1.  반월 234845\n",
+      "       1.  신길온천 (인원수) 92297\n",
+      "       2.  수리산 (인원수) 219523\n",
+      "       3.  반월 (인원수) 234845\n",
       "============================================\n",
       "과천선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  범계 1357810\n",
-      "       1.  인덕원 1263738\n",
-      "       1.  평촌 902827\n",
+      "       1.  범계 (인원수) 1357810\n",
+      "       2.  인덕원 (인원수) 1263738\n",
+      "       3.  평촌 (인원수) 902827\n",
       "과천선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  경마공원 71037\n",
-      "       1.  대공원 261884\n",
-      "       1.  과천 289203\n",
+      "       1.  경마공원 (인원수) 71037\n",
+      "       2.  대공원 (인원수) 261884\n",
+      "       3.  과천 (인원수) 289203\n",
       "============================================\n",
       "분당선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  야탑 1361451\n",
-      "       1.  서현 1273643\n",
-      "       1.  모란 1142939\n",
+      "       1.  야탑 (인원수) 1361451\n",
+      "       2.  서현 (인원수) 1273643\n",
+      "       3.  모란 (인원수) 1142939\n",
       "분당선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  복정 11\n",
-      "       1.  구룡 103980\n",
-      "       1.  보정 122966\n",
+      "       1.  복정 (인원수) 11\n",
+      "       2.  구룡 (인원수) 103980\n",
+      "       3.  보정 (인원수) 122966\n",
       "============================================\n",
       "일산선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  삼송 976517\n",
-      "       1.  화정 922486\n",
-      "       1.  대화 607323\n",
+      "       1.  삼송 (인원수) 976517\n",
+      "       2.  화정 (인원수) 922486\n",
+      "       3.  대화 (인원수) 607323\n",
       "일산선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  지축 1\n",
-      "       1.  대곡 91176\n",
-      "       1.  마두 399396\n",
+      "       1.  지축 (인원수) 1\n",
+      "       2.  대곡 (인원수) 91176\n",
+      "       3.  마두 (인원수) 399396\n",
       "============================================\n",
       "중앙선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  회기 1291817\n",
-      "       1.  구리 742137\n",
-      "       1.  도농 506114\n",
+      "       1.  회기 (인원수) 1291817\n",
+      "       2.  구리 (인원수) 742137\n",
+      "       3.  도농 (인원수) 506114\n",
       "중앙선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  지평 4781\n",
-      "       1.  신원 17033\n",
-      "       1.  오빈 18399\n",
+      "       1.  지평 (인원수) 4781\n",
+      "       2.  신원 (인원수) 17033\n",
+      "       3.  오빈 (인원수) 18399\n",
       "============================================\n",
       "장항선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  온양온천 209026\n",
-      "       1.  아산 158130\n",
-      "       1.  쌍용(나사렛대) 113102\n",
+      "       1.  온양온천 (인원수) 209026\n",
+      "       2.  아산 (인원수) 158130\n",
+      "       3.  쌍용(나사렛대) (인원수) 113102\n",
       "장항선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  배방 55556\n",
-      "       1.  봉명 63341\n",
-      "       1.  신창(순천향대) 85343\n",
+      "       1.  배방 (인원수) 55556\n",
+      "       2.  봉명 (인원수) 63341\n",
+      "       3.  신창(순천향대) (인원수) 85343\n",
       "============================================\n",
       "경의선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  일산 505769\n",
-      "       1.  행신 413064\n",
-      "       1.  탄현 396642\n",
+      "       1.  일산 (인원수) 505769\n",
+      "       2.  행신 (인원수) 413064\n",
+      "       3.  탄현 (인원수) 396642\n",
       "경의선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  검암 1\n",
-      "       1.  계양 6\n",
-      "       1.  임진강 1721\n",
+      "       1.  검암 (인원수) 1\n",
+      "       2.  계양 (인원수) 6\n",
+      "       3.  임진강 (인원수) 1721\n",
       "============================================\n",
       "경춘선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  평내호평 344552\n",
-      "       1.  마석 225552\n",
-      "       1.  퇴계원 191924\n",
+      "       1.  평내호평 (인원수) 344552\n",
+      "       2.  마석 (인원수) 225552\n",
+      "       3.  퇴계원 (인원수) 191924\n",
       "경춘선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  백양리 7342\n",
-      "       1.  굴봉산 14173\n",
-      "       1.  김유정 21952\n",
+      "       1.  백양리 (인원수) 7342\n",
+      "       2.  굴봉산 (인원수) 14173\n",
+      "       3.  김유정 (인원수) 21952\n",
       "============================================\n",
       "수인선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  소래포구 321865\n",
-      "       1.  인하대 314005\n",
-      "       1.  인천논현 312406\n",
+      "       1.  소래포구 (인원수) 321865\n",
+      "       2.  인하대 (인원수) 314005\n",
+      "       3.  인천논현 (인원수) 312406\n",
       "수인선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  달월 4934\n",
-      "       1.  야목 13157\n",
-      "       1.  어천 39865\n",
+      "       1.  달월 (인원수) 4934\n",
+      "       2.  야목 (인원수) 13157\n",
+      "       3.  어천 (인원수) 39865\n",
       "============================================\n",
       "경강선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  경기광주 362348\n",
-      "       1.  판교 223186\n",
-      "       1.  초월 157281\n",
+      "       1.  경기광주 (인원수) 362348\n",
+      "       2.  판교 (인원수) 223186\n",
+      "       3.  초월 (인원수) 157281\n",
       "경강선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  세종대왕릉 18060\n",
-      "       1.  이매 59225\n",
-      "       1.  신둔도예촌 72789\n",
+      "       1.  세종대왕릉 (인원수) 18060\n",
+      "       2.  이매 (인원수) 59225\n",
+      "       3.  신둔도예촌 (인원수) 72789\n",
       "============================================\n",
       "공항철도 1호선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  디지털미디어시티 654422\n",
-      "       1.  김포공항 531828\n",
-      "       1.  홍대입구 509765\n",
+      "       1.  디지털미디어시티 (인원수) 654422\n",
+      "       2.  김포공항 (인원수) 531828\n",
+      "       3.  홍대입구 (인원수) 509765\n",
       "공항철도 1호선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  인천공항2터미널 100345\n",
-      "       1.  공항화물청사 124091\n",
-      "       1.  공덕 131753\n",
+      "       1.  인천공항2터미널 (인원수) 100345\n",
+      "       2.  공항화물청사 (인원수) 124091\n",
+      "       3.  공덕 (인원수) 131753\n",
       "============================================\n",
       "우이신설선 : 이용객이 가장 많은 역 순위\n",
-      "       1.  북한산보국문 315745\n",
-      "       1.  솔샘 286916\n",
-      "       1.  정릉 232670\n",
+      "       1.  북한산보국문 (인원수) 315745\n",
+      "       2.  솔샘 (인원수) 286916\n",
+      "       3.  정릉 (인원수) 232670\n",
       "우이신설선 : 이용객이 가장 적은 역 순위\n",
-      "       1.  보문 80208\n",
-      "       1.  삼양 111930\n",
-      "       1.  신설동 115092\n"
+      "       1.  보문 (인원수) 80208\n",
+      "       2.  삼양 (인원수) 111930\n",
+      "       3.  신설동 (인원수) 115092\n"
      ]
     }
    ],
    "source": [
     "#실습2. 지하철 이용객\n",
     "import csv\n",
-    "f = open('subwayfee.csv')\n",
-    "data= csv.reader(f)\n",
-    "next(data)\n",
     "\n",
     "listName = ['1호선','2호선','3호선','4호선','5호선','6호선','7호선','8호선','9호선','9호선2~3단계','경부선','경인선','경원선',\n",
     "           '안산선','과천선','분당선','일산선','중앙선','장항선','경의선','경춘선','수인선','경강선','공항철도 1호선','우이신설선']\n",
@@ -330,13 +328,13 @@
     "    #print(list_a)\n",
     "    print(\"============================================\")\n",
     "    print(station, \": 이용객이 가장 많은 역 순위\")\n",
-    "    print(\"       1. \",dictionary[list_a[len(list_a)-1]],list_a[len(list_a)-1])\n",
-    "    print(\"       1. \",dictionary[list_a[len(list_a)-2]],list_a[len(list_a)-2])\n",
-    "    print(\"       1. \",dictionary[list_a[len(list_a)-3]],list_a[len(list_a)-3])\n",
+    "    print(\"       1. \",dictionary[list_a[len(list_a)-1]], \"(인원수)\", list_a[len(list_a)-1])\n",
+    "    print(\"       2. \",dictionary[list_a[len(list_a)-2]], \"(인원수)\", list_a[len(list_a)-2])\n",
+    "    print(\"       3. \",dictionary[list_a[len(list_a)-3]], \"(인원수)\", list_a[len(list_a)-3])\n",
     "    print(station, \": 이용객이 가장 적은 역 순위\")\n",
-    "    print(\"       1. \",dictionary[list_a[0]],list_a[0])\n",
-    "    print(\"       1. \",dictionary[list_a[1]],list_a[1])\n",
-    "    print(\"       1. \",dictionary[list_a[2]],list_a[2])\n",
+    "    print(\"       1. \",dictionary[list_a[0]], \"(인원수)\", list_a[0])\n",
+    "    print(\"       2. \",dictionary[list_a[1]], \"(인원수)\", list_a[1])\n",
+    "    print(\"       3. \",dictionary[list_a[2]], \"(인원수)\", list_a[2])\n",
     "\n",
     "\n",
     "f.close()"
