12주차 과제 최종최종수정본 입니다.

--- a/week12.ipynb
+++ b/week12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bd553ac3",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "일교차가 가장 큰 날은  2021-04-21 입니다.\n",
-      "최저기온이 가장 낮은 날은  2021-04-19  입니다.\n",
-      "최고기온이 가장 높은 날은  2021-05-14  입니다.\n"
+      "일교차가 가장 큰 날은  1942-04-19 입니다.\n",
+      "최저기온이 가장 낮은 날은  1927-12-31  입니다.\n",
+      "최고기온이 가장 높은 날은  2018-08-01  입니다.\n"
      ]
     }
    ],
@@ -22,21 +22,21 @@
     "f1 = open('seoul.csv')\n",
     "data1= csv.reader(f1)\n",
     "next(data1)\n",
-    "\n",
     "highTemp = float(0) #최고기온이 가장 높은날\n",
     "lowTemp = float(999) #최저기온이 가장  낮은날\n",
     "bigGapTemp = float(0) #일교차가 가장 큰 날\n",
     "\n",
     "for row in data1:\n",
-    "    row[3] = float(row[3])\n",
-    "    row[4] = float(row[4])\n",
-    "    if lowTemp > row[3]:\n",
-    "         lowTemp = row[3]\n",
-    "    if row[4] > highTemp:\n",
-    "         highTemp = row[4]\n",
-    "    temp = float(row[4]) - float(row[3])\n",
-    "    if bigGapTemp < temp:\n",
-    "         bigGapTemp = temp\n",
+    "    if row[3] !='' and row[4] != '':\n",
+    "        row[3] = float(row[3])\n",
+    "        row[4] = float(row[4])\n",
+    "        if lowTemp > row[3]:\n",
+    "             lowTemp = row[3]\n",
+    "        if row[4] > highTemp:\n",
+    "             highTemp = row[4]\n",
+    "        temp = float(row[4]) - float(row[3])\n",
+    "        if bigGapTemp < temp:\n",
+    "             bigGapTemp = temp\n",
     "\n",
     "            \n",
     "\n",
@@ -50,16 +50,17 @@
     "bigGapDate = ''\n",
     "\n",
     "for row in data2:\n",
-    "    row[3] = float(row[3])\n",
-    "    row[4] = float(row[4])\n",
-    "    if float(row[4]) == float(highTemp):\n",
-    "        highDate = row[0]\n",
-    "    if row[3] == lowTemp:\n",
-    "        lowDate = row[0]\n",
+    "    if row[3] !='' and row[4] != '':\n",
+    "        row[3] = float(row[3])\n",
+    "        row[4] = float(row[4])\n",
+    "        if float(row[4]) == float(highTemp):\n",
+    "            highDate = row[0]\n",
+    "        if row[3] == lowTemp:\n",
+    "            lowDate = row[0]\n",
     "    \n",
-    "    temp = row[4] - row[3]\n",
-    "    if temp == bigGapTemp:\n",
-    "        bigGapDate = row[0]\n",
+    "        temp = row[4] - row[3]\n",
+    "        if temp == bigGapTemp:\n",
+    "            bigGapDate = row[0]\n",
     "    \n",
     "print(\"일교차가 가장 큰 날은 \", bigGapDate, \"입니다.\")\n",
     "print(\"최저기온이 가장 낮은 날은 \",lowDate,\" 입니다.\")\n",
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "80273fa1",
    "metadata": {},
    "outputs": [
@@ -341,9 +342,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "58ceb609",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ddb7a6",
+   "id": "a6ff6a8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -351,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6ff6a8f",
+   "id": "764e962a",
    "metadata": {},
    "outputs": [],
    "source": []
